--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jquery": "^3.2.1",
     "moment": "^2.18.1",
     "ngx-facebook": "^2.4.0",
+    "ngx-infinite-scroll": "^0.5.1",
     "rxjs": "^5.4.2",
     "tether": "^1.4.0",
     "zone.js": "^0.8.14"
